--- a/css/test.css
+++ b/css/test.css
@@ -1,9 +1,44 @@
-.header {
-    background: black;
-}
 body{
-	background-color: white;
+    background-color: white;
+    margin: 0;
 }
+.main_flex-container {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+}
+
+.logo-header {
+     display: flex;    
+     background: black;
+    
+}
+h1 {
+    display: flex;
+    font-size: 2em;
+    margin-block-start: 0;
+    margin-block-end: 0;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    font-weight: bold;
+    position: relative;
+    background: rgb(255, 255, 255);
+    border-bottom: 2px solid rgba(223, 223, 223, 0.87);
+    
+}
+    
+h1:before, h1:after {
+    content: "";
+    position: absolute;
+    background: rgb(255, 255, 255);  
+    top: 0;
+    bottom: 0;
+    width: 9999px;  
+    
+}
+    
+
+
 /* #content {
 	float: right;
 	width: 90%;
@@ -13,12 +48,12 @@ body{
 	width: 10%;
 } */
 
-.flex-container {
+/* .flex-container {
     padding: 0;
     margin: 1;
     list-style: none;
     /* border: 1px solid silver; */
-    -ms-box-orient: horizontal;
+    /* -ms-box-orient: horizontal;
     display: -webkit-box;
     display: -moz-box;
     display: -ms-flexbox;
@@ -49,4 +84,4 @@ body{
     font-size: 18px;
     float: left;
     color: white;
-}
+} */ */
