--- a/css/test.css
+++ b/css/test.css
@@ -1,6 +1,10 @@
+html {
+    height: 100%;
+}
 body{
     background-color: white;
     margin: 0;
+    height: 100%;
 }
 .main_flex-container {
     display: flex;
@@ -10,11 +14,12 @@ body{
 
 .logo-header {
      display: flex;    
-     background: black;
-    
+     background: black;  
 }
-h1 {
+
+.white-line {
     display: flex;
+    height: 30px;
     font-size: 2em;
     margin-block-start: 0;
     margin-block-end: 0;
@@ -27,17 +32,20 @@ h1 {
     
 }
     
-h1:before, h1:after {
-    content: "";
-    position: absolute;
-    background: rgb(255, 255, 255);  
-    top: 0;
-    bottom: 0;
-    width: 9999px;  
-    
-}
-    
 
+}
+.guide-flex {
+    padding: 0;
+    margin: 1;
+    list-style: none;
+    border: 1px solid silver;
+    display: flex;
+    height: 100%;
+    justify-content: flex-start;
+}    
+.flex-item {
+    padding: 1px;
+}
 
 /* #content {
 	float: right;
