--- a/css/test.css
+++ b/css/test.css
@@ -2,11 +2,12 @@ html {
     height: 100%;
 }
 body{
+    display: flex;
     background-color: white;
     margin: 0;
     height: 100%;
 }
-.main_flex-container {
+.main-container {
     display: flex;
     flex-direction: column;
     height: 100%;
@@ -14,7 +15,8 @@ body{
 
 .logo-header {
      display: flex;    
-     background: black;  
+     background: black; 
+     width: calc(100vW); 
 }
 
 .white-line {
@@ -29,22 +31,25 @@ body{
     position: relative;
     background: rgb(255, 255, 255);
     border-bottom: 2px solid rgba(223, 223, 223, 0.87);
-    
+    opacity: 0.7;
 }
     
 
 }
-.guide-flex {
+.guide {
+    display: flex;
     padding: 0;
     margin: 1;
     list-style: none;
-    border: 1px solid silver;
-    display: flex;
-    height: 100%;
-    justify-content: flex-start;
+    flex-wrap: wrap;
+    flex-direction: row;
 }    
-.flex-item {
-    padding: 1px;
+.guide li {
+    display: block;
+    padding: 30px;
+    list-style: none;
+    color: red;
+    background-color: blue;
 }
 
 /* #content {
