--- a/css/test.css
+++ b/css/test.css
@@ -10,7 +10,7 @@ body{
 .main-container {
     display: flex;
     flex-direction: column;
-    height: 100%;
+    flex-grow: 1;
     
 }
 
@@ -31,17 +31,18 @@ body{
     font-weight: bold;
     position: relative;
     background: rgb(255, 255, 255);
-    border-bottom: 2px solid rgba(223, 223, 223, 0.87);
-    opacity: 0.7;
+    border-bottom: 3px solid rgba(196, 196, 196, 1);
+    
 }
     
 .guide {
     display: flex;
     padding: 0;
-    margin: 1;
+    margin: 10px 0px;
     list-style: none;
     flex-wrap: wrap;
     flex-direction: row;
+    font-weight: bold;
 }    
 .guide li {
     display: block;
@@ -56,14 +57,14 @@ body{
 
 .menu-content-container {
     display: flex; 
-    height: calc(100vh);
+    flex-grow: 1;
    }
 
 .menu {
     display: flex;
     flex-direction: column;
     width: 250px;
-    height: 100%;
+    
     background-color: violet;
 }
 
@@ -71,7 +72,6 @@ body{
     display: flex;
     flex-flow: row wrap;
     padding: 20px;
-    width: 100%;
+    flex-grow: 1;
     background-color: yellow;
 }
-asdasda
