--- a/css/test.css
+++ b/css/test.css
@@ -8,12 +8,17 @@ body{
     height: 100%;
     
 }
+
+/* Главный котейнер */
+
 .main-container {
     display: flex;
     flex-direction: column;
     flex-grow: 1;
     
 }
+
+/* ХЕДЕР */
 
 .logo-header {
      display: flex;    
@@ -35,7 +40,9 @@ body{
     border-bottom: 3px solid rgba(196, 196, 196, 1);
     
 }
-    
+
+/* Навигация */
+
 .guide {
     display: flex;
     padding: 0;
@@ -55,6 +62,8 @@ body{
 .guide li:not(:first-child) {
     margin-left: 10px;
 }
+
+/* Второй блок сайта: меню и карточки */
 
 .menu-content-container {
     display: flex; 
@@ -80,20 +89,29 @@ body{
     overflow-x: hidden;
 }
 
+/* КАРТОЧКИ */
+
 .card-item {
     display: flex;
     flex-direction: column;
-    width: 390px;
-    height: 390px;
-    background-color: rgba(238, 238, 238, 0.808);
+    justify-content: space-between;
+    width: 300px;
+    height: 360px;
+    background-color: rgb(255, 255, 255);
     border: 3px solid rgba(7, 4, 4, 0.411);
 
 }
 
-.item-img{
-    position: relative;
-    border: 1px solid hsla(21, 37%, 15%, 0.3);
-    max-width: 100%;
+.item-img {
+    align-self: center;
+    border: 3px solid rgb(250, 4, 217);
+    max-width: 80%;
     height: auto;
-    display: block;
+    
 }
+
+.item-discr{
+    
+}
+
+
