--- a/css/test.css
+++ b/css/test.css
@@ -1,5 +1,6 @@
 html {
     height: 100%;
+    font: 
 }
 body{
     display: flex;
@@ -9,13 +10,19 @@ body{
     
 }
 
+/* ШРИФТЫ */
+
+*{
+    font-family: 'roboto', sans-serif;
+}
+
 /* Главный котейнер */
 
-.main-container {
+.main-container { 
     display: flex;
     flex-direction: column;
     flex-grow: 1;
-    
+       
 }
 
 /* ХЕДЕР */
@@ -26,9 +33,16 @@ body{
      width: calc(100vW); 
 }
 
+.logo-image{
+    width: 100px;
+    height: auto;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
 .white-line {
     display: flex;
-    height: 30px;
+    height: 40px;
     font-size: 2em;
     margin-block-start: 0;
     margin-block-end: 0;
@@ -37,7 +51,7 @@ body{
     font-weight: bold;
     position: relative;
     background: rgb(255, 255, 255);
-    border-bottom: 3px solid rgba(196, 196, 196, 1);
+    border-bottom: 3px solid rgba(196, 196, 196, 0.842);
     
 }
 
@@ -55,8 +69,7 @@ body{
 .guide li {
     display: block;
     list-style: none;
-    color: red;
-    background-color: blue;
+    color: rgb(0, 0, 0);
 }
 
 .guide li:not(:first-child) {
@@ -110,8 +123,18 @@ body{
     
 }
 
-.item-discr{
-    
+.item-name{
+    font-weight: bold ;
+    text-transform: uppercase;     
 }
 
+.item-price{
+    text-transform: uppercase;
+    font-weight: bold
+}
+.item-gen{
+    font-weight: lighter ;
+    font-size: smaller;    ;
+    text-transform: capitalize ; 
+}
 
